--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@supabase/supabase-js": "^2.13.1",
 		"crypto-js": "^4.1.1",
 		"ethers": "^5.4",
+		"random-word-slugs": "^0.1.6",
 		"uuid": "^9.0.0"
 	}
 }
