--- a/package.json
+++ b/package.json
@@ -27,14 +27,20 @@
 		"svelte-check": "^3.0.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.2.0"
+		"vite": "^4.2.0",
+		"postcss": "^8.4.14",
+		"postcss-load-config": "^4.0.1",
+		"svelte-preprocess": "^4.10.7",
+		"autoprefixer": "^10.4.7"
 	},
 	"type": "module",
 	"dependencies": {
+		"@skeletonlabs/skeleton": "^1.1.0",
 		"@supabase/supabase-js": "^2.13.1",
 		"crypto-js": "^4.1.1",
 		"ethers": "^5.4",
 		"random-word-slugs": "^0.1.6",
+		"tailwindcss": "^3.3.1",
 		"uuid": "^9.0.0"
 	}
 }
