--- a/package.json
+++ b/package.json
@@ -35,12 +35,19 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@codemirror/lang-markdown": "^6.1.1",
+		"@codemirror/language-data": "^6.2.1",
+		"@codemirror/theme-one-dark": "^6.1.1",
 		"@floating-ui/dom": "^1.2.6",
 		"@skeletonlabs/skeleton": "^1.1.0",
 		"@supabase/supabase-js": "^2.13.1",
+		"codemirror": "^6.0.1",
 		"crypto-js": "^4.1.1",
 		"ethers": "^5.4",
+		"github-markdown-css": "^5.2.0",
+		"highlight.js": "^11.7.0",
 		"random-word-slugs": "^0.1.6",
+		"svelte-exmarkdown": "^2.0.0",
 		"tailwindcss": "^3.3.1",
 		"uuid": "^9.0.0"
 	}
