--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-netlify": "^2.0.7",
 		"@sveltejs/kit": "^1.5.0",
 		"@types/crypto-js": "^4.1.1",
 		"@types/uuid": "^9.0.1",
