--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
 		"@sveltejs/adapter-netlify": "^2.0.7",
 		"@sveltejs/kit": "^1.5.0",
 		"@types/crypto-js": "^4.1.1",
-		"@types/uuid": "^9.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.7",
@@ -44,12 +43,10 @@
 		"@supabase/supabase-js": "^2.13.1",
 		"codemirror": "^6.0.1",
 		"crypto-js": "^4.1.1",
-		"ethers": "^5.4",
 		"github-markdown-css": "^5.2.0",
 		"highlight.js": "^11.7.0",
 		"random-word-slugs": "^0.1.6",
 		"svelte-exmarkdown": "^2.0.0",
-		"tailwindcss": "^3.3.1",
-		"uuid": "^9.0.0"
+		"tailwindcss": "^3.3.1"
 	}
 }
